Fixed issue in dark mode

--- a/views/scss/main.scss
+++ b/views/scss/main.scss
@@ -195,6 +195,10 @@ body.dark {
             color: $dark_font_color;
         }
     }
+    
+    li {
+        color: $dark_font_color;
+    }
 }
 
 .hidden {
